<?xml version="1.0" encoding="utf-8"?>
<!--- pi is for person info-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="8dp"
    android:theme="@style/Theme.MovieFan"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pi_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnSurface"
        android:padding="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pi_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pi_primary_iv"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pi_primary_info_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pi_primary_iv"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/pi_primary_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.4" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pi_primary_person_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="sans-serif-black"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="?attr/titleTextColor"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pi_primary_tv_title"
                    style="@style/MovieInfoTextSubtitle"
                    android:layout_marginStart="8dp"
                    android:text="@string/p_tv_shows"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pi_primary_person_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pi_primary_tvlist"
                    style="@style/MovieInfoText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/pi_primary_guideline"
                    app:layout_constraintTop_toTopOf="@+id/pi_primary_tv_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pi_primary_movies_titles"
                    style="@style/MovieInfoTextSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/pi_movie"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pi_primary_tvlist" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pi_primary_movieslist"
                    style="@style/MovieInfoText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/pi_primary_guideline"
                    app:layout_constraintTop_toTopOf="@+id/pi_primary_movies_titles" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pi_primary_department_title"
                    style="@style/MovieInfoTextSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/pi_department"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pi_primary_movieslist" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pi_primary_department"
                    style="@style/MovieInfoText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/pi_primary_guideline"
                    app:layout_constraintTop_toTopOf="@+id/pi_primary_department_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pi_additional_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pi_primary">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_photos_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pi_photos"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="?attr/titleTextColor"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pia_rv_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pia_photos_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_more_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pi_more_info"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="?attr/titleTextColor"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pia_rv_photos" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/pia_additional_info_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_birthday_title"
                style="@style/MovieInfoTextSubtitle"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pi_birthday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pia_more_info_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_birthday"
                style="@style/MovieInfoText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pia_additional_info_guideline"
                app:layout_constraintTop_toTopOf="@+id/pia_birthday_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_deathday_title"
                style="@style/MovieInfoTextSubtitle"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pi_deathday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pia_birthday" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_deathday"
                style="@style/MovieInfoText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pia_additional_info_guideline"
                app:layout_constraintTop_toTopOf="@+id/pia_deathday_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_place_of_birth_title"
                style="@style/MovieInfoTextSubtitle"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pi_place_of_birth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pia_deathday" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_place_of_birth"
                style="@style/MovieInfoText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pia_additional_info_guideline"
                app:layout_constraintTop_toTopOf="@+id/pia_place_of_birth_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_also_known_as_title"
                style="@style/MovieInfoTextSubtitle"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pi_also_known_as"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pia_place_of_birth" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_also_known_as"
                style="@style/MovieInfoText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pia_additional_info_guideline"
                app:layout_constraintTop_toTopOf="@+id/pia_also_known_as_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_homepage_title"
                style="@style/MovieInfoTextSubtitle"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pi_homepage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pia_also_known_as" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_homepage"
                style="@style/MovieInfoText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pia_additional_info_guideline"
                app:layout_constraintTop_toTopOf="@+id/pia_homepage_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_biography_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pi_biography"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="?attr/titleTextColor"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pia_homepage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pia_biography"
                style="@style/MovieInfoText"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pia_biography_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>